fixed chat text input overflow in embedding

--- a/app/components/chat/chat.scss
+++ b/app/components/chat/chat.scss
@@ -221,6 +221,9 @@
       }
     }
 
+    &__text-area-container {
+      display: flex;
+    }
     &__text-area {
       display: flex;
       width: 100%;
